Fixed the image overlap issue.
Used z index in the css code to fix the image overlap.

--- a/main.css
+++ b/main.css
@@ -85,5 +85,6 @@ body {
 }
 
 .section#s1 {
-  background-image: url("scenergy teset.jpg");   
+  background-image: url("scenergy teset.jpg");
+  z-index:-5; 
 }
